# delivery

./: .gitignore  Justfile  README.md  alembic.ini  pyproject.toml
delivery/: __main__.py  application.py  event_publisher.py  exception_handlers.py  ioc.py  kafka.py  lifetime.py  settings.py
delivery/adapters/input/http/: __init__.py  router.py
delivery/adapters/input/http/controllers/: __init__.py  create_courier_controller.py  create_order_controller.py  get_couriers_controller.py  get_orders_controller.py
delivery/adapters/input/http/mappers/: __init__.py  courier_mapper.py  order_mapper.py
delivery/adapters/input/http/models/: __init__.py  courier.py  error.py  location.py  order.py
delivery/adapters/input/kafka/: basket_events_consumer.py  baskets_events_pb2.py
delivery/adapters/input/kafka/mappers/: basket_event_mapper.py
delivery/adapters/input/scheduler/: __init__.py  scheduler_config.py
delivery/adapters/input/scheduler/jobs/: __init__.py  assign_orders_job.py  move_couriers_job.py  outbox_job.py
delivery/core/application/commands/assign_order_to_courier/: __init__.py  command.py  handler.py  handler_impl.py
delivery/core/application/commands/create_courier/: __init__.py  command.py  handler.py  handler_impl.py
delivery/core/application/commands/create_order/: __init__.py  command.py  handler.py  handler_impl.py
delivery/core/application/commands/move_couriers/: __init__.py  command.py  handler.py  handler_impl.py
delivery/core/application/queries/get_all_couriers/: __init__.py  dto.py  handler.py  handler_impl.py  query.py
delivery/core/application/queries/get_all_incomplete_orders/: __init__.py  dto.py  handler.py  handler_impl.py  query.py
delivery/core/application/services/: __init__.py  kafka_consumer_resolver.py
delivery/core/domain/model/: kernel.py
delivery/core/domain/model/courier/: courier.py  storage_place.py
delivery/core/domain/model/order/: order.py  order_status.py
delivery/core/domain/model/order/events/: __init__.py  order_completed_domain_event.py  order_created_domain_event.py
delivery/core/domain/service/: __init__.py  order_dispatch_service.py
delivery/core/ports/: __init__.py  courier_repository.py  geo_location_client.py  kafka_consumer.py  kafka_consumer_registry.py  order_events_producer.py  order_repository.py  outbox_repository.py  unit_of_work.py
delivery/database/: models.py
delivery/database/migrations/: env.py  script.py.mako
delivery/database/migrations/versions/: 2026-03-16_14:57:56_init.py  2026-04-01_1:33:26_add_outbox.py
delivery/libs/ddd/: __init__.py  aggregate.py  entity.py  events.py  value_object.py
delivery/libs/errs/: __init__.py  error.py  general_errors.py  guard.py  result.py
tests/: conftest.py
tests/adapters/in/: __init__.py
tests/adapters/in/http/: __init__.py  test_create_courier_controller.py  test_create_order_controller.py  test_get_couriers_controller.py  test_get_orders_controller.py
tests/core/application/commands/: test_assign_order_to_courier.py  test_create_courier.py  test_create_order.py  test_move_couriers.py
tests/core/application/queries/: test_get_all_couriers.py  test_get_all_incomplete_orders.py
tests/core/domain/model/: test_kernel.py
tests/core/domain/model/courier/: test_courier.py  test_storage_place.py
tests/core/domain/model/order/: test_order.py
tests/core/domain/service/: test_order_dispatch_service.py
tests/test_fixtures/: __init__.py
